--- a/static/test.html
+++ b/static/test.html
@@ -1,13 +1,12 @@
 <html>
 <head>
-    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
 
     <div class="container">
     </div>
 	
-    <script src="build/index.elm.js"></script>
+    <script src="build/test.elm.js"></script>
     <script>
         Elm.Main.fullscreen();
         /*
