--- a/src/front/static/index.html
+++ b/src/front/static/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="./style.css" />
+    <link
+    	rel="shortcut icon"
+		href="./favicon.ico"
+        type="image/x-icon"
+    />
 </head>
 <body>
 
