refactor structure front

--- a/src/front/static/proto.html
+++ b/src/front/static/proto.html
@@ -12,7 +12,7 @@
     <div class="container">
     </div>
 	
-    <script src="/build/index.elm.js"></script>
+    <script src="/build/proto.elm.js"></script>
     <script>
         Elm.Main.fullscreen();
         /*
