--- a/src/front/static/test.html
+++ b/src/front/static/test.html
@@ -6,7 +6,7 @@
     <div class="container">
     </div>
 	
-    <script src="build/test.elm.js"></script>
+    <script src="/build/test.elm.js"></script>
     <script>
         Elm.Main.fullscreen();
         /*
